--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 16, 2018 </t>
-                 <td align="left"> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif" title="Spring Break">Spring Break</a> </td>
+                 <td align="left"> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif" title="Spring Break Comic">Spring Break</a> </td>
                  <td> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif">Cheatsheet and Files</a></td> 
                  <td> Go Play </td> 
               </tr>   
