--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 02, 2018 </t>
-                 <td align="left"> <a href="" title="http://phdcomics.com/comics/archive.php?comicid=686" title = Recruitment Week Comic >Recruitment Week Comic</a> </td>
+                 <td align="left"> <a href="" title="http://phdcomics.com/comics/archive.php?comicid=686" title = "Recruitment Week Comic">Recruitment Week Comic</a> </td>
                  <td> <a href="files/4_functions.zip">Cheatsheet and Files</a></td> 
                  <td> Recruit More Grads </td> 
               </tr>   
