--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@ tr:nth-child(even) {
 
         
              <tr>
-                 <td> March 02, 2018 </t>
-                 <td align="left"> <a href="" title="http://phdcomics.com/comics/archive.php?comicid=686" title = "Recruitment Week Comic">Recruitment Week Comic</a> </td>
-                 <td> <a href="files/4_functions.zip">Cheatsheet and Files</a></td> 
-                 <td> Recruit More Grads </td> 
+                 <td> March 03, 2018 </t>
+                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Recruitement Comic">Recruitement Comic</a> </td>
+                 <td> <a href="http://phdcomics.com/comics.php?f=1286">Comic</a></td> 
+                 <td> Recruite more grads </td> 
               </tr>   
 
         
              <tr>
                  <td> March 16, 2018 </t>
-                 <td align="left"> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif" title="Spring Break Comic">Spring Break</a> </td>
-                 <td> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif">Cheatsheet and Files</a></td> 
+                 <td align="left"> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif" title="Spring Break Comic">Spring Break Comic</a> </td>
+                 <td> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif">Comic</a></td> 
                  <td> Go Play </td> 
               </tr>   
 
