--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 03, 2018 </t>
-                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Recruitment Comic">Recruitement Comic</a> </td>
+                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Recruitment Comic">Recruitment Comic</a> </td>
                  <td> <a href="http://phdcomics.com/comics.php?f=1286">Comic</a></td> 
                  <td> Recruit more grads </td> 
               </tr>   
