--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@ tr:nth-child(even) {
                  <td> <a href="http://phdcomics.com/comics.php?f=1286">Comic</a></td> 
                  <td> Recruit more grads </td> 
               </tr>   
-
+  		<tr>
+                 <td> March 09, 2018 </t>
+                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Introduction to Adobe Illustrator for Mapping">Introduction to Adobe Illustrator for Mapping</a> </td>
+                 <td> <a href="http://phdcomics.com/comics.php?f=1286">Comic</a></td> 
+                 <td> Recruit more grads </td> 
+              </tr>   
         
              <tr>
                  <td> March 16, 2018 </t>
