--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ tr:nth-child(even) {
   		<tr>
                  <td> March 09, 2018 </t>
                  <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Introduction to Adobe Illustrator for Mapping">Introduction to Adobe Illustrator for Mapping</a> </td>
-                 <td> <a href="http://phdcomics.com/comics.php?f=1286">Comic</a></td> 
-                 <td> Recruit more grads </td> 
+                 <td> <a href="http://phdcomics.com/comics.php?f=1286">Cheatsheet and Files</a></td> 
+                 <td> Brendan Hoover </td> 
               </tr>   
         
              <tr>
