--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ tr:nth-child(even) {
               </tr>   
   		<tr>
                  <td> March 09, 2018 </t>
-                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Introduction to Adobe Illustrator for Mapping">Introduction to Adobe Illustrator for Mapping</a> </td>
+                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Introduction to Adobe Illustrator for Cartography">Introduction to Adobe Illustrator for Cartography</a> </td>
                  <td> <a href="http://phdcomics.com/comics.php?f=1286">Cheatsheet and Files</a></td> 
                  <td> Brendan Hoover </td> 
               </tr>   
@@ -163,7 +163,7 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 23, 2018 </t>
-                 <td align="left"> <a href="https://gageutgis.github.io/" title="ArcMap to Adobe workflows for better cartography">ArcMap to Adobe workflows for better cartography</a> </td>
+                 <td align="left"> <a href="https://gageutgis.github.io/" title="ArcMap to Adobe Workflows for Better Cartography">ArcMap to Adobe workflows for better cartography</a> </td>
                  <td> <a href="files/6_automation.zip">Cheatsheet and Files</a></td> 
                  <td> Brendan Hoover </td> 
               </tr>   
