--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 16, 2018 </t>
-                 <td align="left"> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif" title="Spring Break Comic">Spring Break Comic</a> </td>
+                 <td align="left"> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip" title="Spring Break Comic">Spring Break Comic</a> </td>
                  <td> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif">Comic</a></td> 
                  <td> Go Play </td> 
               </tr>   
@@ -163,8 +163,8 @@ tr:nth-child(even) {
         
              <tr>
                  <td> March 23, 2018 </t>
-                 <td align="left"> <a href="https://gageutgis.github.io/" title="ArcMap to Adobe Workflows for Better Cartography">ArcMap to Adobe workflows for better cartography</a> </td>
-                 <td> <a href="files/6_automation.zip">Cheatsheet and Files</a></td> 
+                 <td align="left"> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip" title="ArcMap to Adobe Workflows for Better Cartography">ArcMap to Adobe workflows for better cartography</a> </td>
+                 <td> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip">Cheatsheet and Files</a></td> 
                  <td> Brendan Hoover </td> 
               </tr>   
 
