--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@ tr:nth-child(even) {
               </tr>   
   		<tr>
                  <td> March 09, 2018 </t>
-                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Introduction to Adobe Illustrator for Cartography">Introduction to Adobe Illustrator for Cartography</a> </td>
-                 <td> <a href="http://phdcomics.com/comics.php?f=1286">Cheatsheet and Files</a></td> 
+                 <td align="left"> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip" title="Introduction to Adobe Illustrator for Cartography">Introduction to Adobe Illustrator for Cartography</a> </td>
+                 <td> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip">Cheatsheet and Files</a></td> 
                  <td> Brendan Hoover </td> 
               </tr>   
         
              <tr>
                  <td> March 16, 2018 </t>
-                 <td align="left"> <a href="https://github.com/gageutgis/gageutgis.github.io/blob/master/Cart.zip" title="Spring Break Comic">Spring Break Comic</a> </td>
+                 <td align="left"> <a href="http://phdcomics.com/comics.php?f=1286" title="Spring Break Comic">Spring Break Comic</a> </td>
                  <td> <a href="http://www.phdcomics.com/comics/archive/phd011211s.gif">Comic</a></td> 
                  <td> Go Play </td> 
               </tr>   
